[package]
name = "polkadot-rpc"
version = "0.7.29-pre1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
client = { package = "sc-client", git = "https://github.com/paritytech/substrate", branch = "shawntabrizi-fix-more-benchmarks" }
jsonrpc-core = "14.0.3"
polkadot-primitives = { path = "../primitives" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "shawntabrizi-fix-more-benchmarks"  }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "shawntabrizi-fix-more-benchmarks"  }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "shawntabrizi-fix-more-benchmarks" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "shawntabrizi-fix-more-benchmarks" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "shawntabrizi-fix-more-benchmarks"  }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "shawntabrizi-fix-more-benchmarks" }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
